@@ -1,3 +1,8 @@
+2014-04-28  TANAKA Takuji  <KXD02663@nifty.ne.jp>
+
+	* ptexenc.c: Accept Ctrl+Z as EOF in console (keyboard)
+	in upTeX on Windows.
+
 2014-04-17  Karl Berry  <karl@tug.org>
 
 	* version.ac: 1.3.2 (without the dev) for 2014 pretest.
